[metadata]
name = obd-consumer
version = 0.1
summary = OBD system consuming daemon (for ARM devices)
description-file =
    README.rst
classifier =
    Intended Audience :: Manufacturing
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Visualization

[files]
packages =
    obd_consumer

[entry_points]
console_scripts =
    obd-consumer-api = obd_consumer.cmd:api
    obd-consumer = obd_consumer.cmd:consumer
